--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -352,7 +352,7 @@ c_names=c('600mg x2 (10d)',
           'Flat: malaria (3d)')
 
 # ****** 70 kilograms
-plot(density(log10(c_maxs_70[1,]),na.rm = T), lwd=lwds[1], ylim=c(0,3),yaxt='n',ylab='',
+plot(density(log10(c_maxs_70[1,]),na.rm = T), lwd=lwds[1], ylim=c(0,3),yaxt='n',ylab='Relative density',
      xlim=range(log10(c(1,100)),na.rm = T),lty=ltys[1],main = '', col=cols[1],
      xlab = expression('70kg adult whole blood chloroquine C'[max]*' ('*mu*'mol/L)'),xaxt='n')
 for(i in 2:length(fs)){
@@ -412,22 +412,29 @@ for(ws in weights){
 ```
 
 Make a Table of Results
-```{r}
+```{r above_thresholds}
 eps = c(10,15,20)
+par(mfrow=c(3,1), las=1, familty='serif', bty='n')
 for(ep in eps){
   threshold_results = array(dim=c(length(fs), length(weights)))
   colnames(threshold_results) = weights
   rownames(threshold_results) = c_names
   
   for(i in 1:length(fs)){
+    
     for(ws in weights){
-      
       j = which(ws==weights)
-      
       threshold_results[i,j] = round(100*mean(Cmax_pop[i,j,,q] > ep ,na.rm = T),1)
-      
+    }
+    if(i==1){
+      plot(weights, threshold_results[i, ], col=cols[i], lty=ltys[i], lwd=lwds[i],type='l',
+           xlab='Weight (kg)' , ylab = paste('Proportion (%) above', ep, 'umol/L'), panel.first = grid())
+      title(paste('Threshold value of',ep,'umol/L'))
+    } else {
+      lines(weights, threshold_results[i, ], col=cols[i], lty=ltys[i], lwd=lwds[i])
     }
   }
+  if(ep==10) legend('topright',legend = c_names,lty=ltys, inset=0.02,col=cols,lwd=lwds)
   print(threshold_results)
   write.csv(x = threshold_results, file = paste('threshold',ep,'.csv',sep=''))
 }
