--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -20,9 +20,16 @@ library(gtools)
 library(rstan)
 library(RColorBrewer)
 RUN_MODELS=F
+
+#****** Parameters for the analysis *******
+plasma_to_whole_blood_ratio = 3 # conversion for PK model 2
+Weight_interested = 70 # displays results for chosen weight - has to be multiple of 5 between 40 and 90!
+
 ```
 
 ## Data from self-poisoning cohorts
+
+Data from Riou were extracted from published graph (see Figure 3 in NEJM Riou et al, 1988) using WebPlotDigitiser
 
 ```{r pooled_data}
 pooled_data = read.csv('Pooled_data.csv')
@@ -54,7 +61,8 @@ legend('bottomright', lwd=3, legend = c('Prospective data','Retrospective data')
 
 #### Estimating delta increase in those with observed peak
 
-We only use prospectively studied patients
+We only use prospectively studied patients - the retrospectively studied patients have quite a different concentration-fatality profile.
+
 ```{r}
 pooled_data = dplyr::filter(pooled_data, Prospective=='Yes')
 ind_increase = which(!is.na(pooled_data$CQumolL_Peak) &
@@ -91,8 +99,8 @@ model {
   //Prior
   alpha ~ normal(mean_alpha,sd_alpha);
   beta ~ normal(mean_beta,sd_beta);
-  gamma ~ normal(0.7, 0.065);
-  delta ~ exponential(7.8);
+  gamma ~ normal(0.7, 0.065); // Prior is estimated from a large CQ&DCQ dataset
+  delta ~ exponential(7.8); // rate parameter estimated from the observed peak vs admission
   // Likelihood
   y_peak ~ bernoulli_logit(alpha + beta * (log(gamma * (exp(log_conc_peak)))));
   y_admission ~ bernoulli_logit(alpha + beta * (log(gamma * (exp(log_conc_admission))) + delta));
@@ -172,8 +180,6 @@ print(quantile(OnePercent, probs = c(0.025, 0.975)))
 
 ```{r compare_PK_models}
 load('Population_Cmax_values.RData')
-plasma_to_whole_blood_ratio = 3
-Weight_interested = 70
 
 # plasma model
 ind_plasma = grep(pattern = 'plasma', x = unlist(dimnames(Cmax_pop)[1]))
@@ -381,7 +387,7 @@ knitr::kable(round(100*apply(Cmax_pop[,,,1] > 10, c(1,2), mean),1))
 ```
 
 
-## Supplmentary: Plasma PK model predictionsm
+## Supplementary: Plasma PK model predictionsm
 
 ```{r}
 writeLines(sprintf('Using a blood to plasma ratio of %s', plasma_to_whole_blood_ratio))
