--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -49,7 +49,8 @@ coef(mod_pros)
 coef(mod_retro)
 
 plot(1:100, predict(mod_pros, newdata = data.frame(CQumolL_Admission=1:100),type='response'),type='l',
-     ylim=c(0,1),lwd=3, xlab='Chloroquine concentration (umol/L)',ylab='Probability of death')
+     ylim=c(0,1),lwd=3, xlab='Chloroquine concentration (umol/L)',
+      ylab='Probability of death', panel.first=grid())
 lines(1:100, predict(mod_retro, newdata = data.frame(CQumolL_Admission=1:100),type='response'),
       col='blue',lwd=3,lty=2)
 legend('bottomright', lwd=3, legend = c('Prospective data','Retrospective data'),col=c(1,4),
